# cyberODM

./: CODEOWNERS  README.md  config.yml  pyproject.toml
app/: streamlit_app.py
data/: initiatives.csv  kpis.csv  outcomes.csv  value_map.csv
docs/: Executive-Brief.md  metrics.md
outputs/: okr_progress.csv  outcome_scores.csv  outcome_scores_latest.csv  report.md  value_realization.csv
scripts/: export_pptx.py
src/cyberodm/: __init__.py  cli.py  compute.py  report.py  utils.py
